# Stm32CubeIDE

./: .gitignore  README.md
STM32F407-DISCOVERY/: .cproject  .mxproject  .project  CMakeLists.txt  STM32F407-DISCOVERY.ioc
STM32F407-DISCOVERY/Core/Inc/: main.h  net.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
STM32F407-DISCOVERY/Core/Src/: main.c  net.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
STM32F407-DISCOVERY/Debug/: STM32F407-DISCOVERY.elf  STM32F407-DISCOVERY.list  STM32F407-DISCOVERY.map
STM32F407-DISCOVERY/Debug/Core/Src/: main.su
STM32F407-DISCOVERY/LWIP/App/: lwip.c
STM32F407-DISCOVERY/Release/: STM32F407-DISCOVERY.elf  STM32F407-DISCOVERY.list  STM32F407-DISCOVERY.map  makefile
STM32F407-DISCOVERY/Release/Core/Src/: main.su  stm32f4xx_hal_msp.su  subdir.mk
STM32F407-DISCOVERY/Release/USB_HOST/App/: subdir.mk
STM32F407-DISCOVERY_W5500_INTRON/: .cproject  .gitignore  .mxproject  .project  CMakeLists.txt  CMakeLists.txt.autosave  Konverter  STM32F407-DISCOVERY_W5500_INTRON.ioc  STM32F407VGTX_FLASH.ld  Untitled_0.stc  validateIP.js  version_Bridge
STM32F407-DISCOVERY_W5500_INTRON/Core/Inc/: config.h.in  eeprom.h  httpd.h  main.h  my_function.h  net.h  ping.h  spi_eeprom.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  userHandler.h  w5500.h  webpage.h  wizchip_init.h
STM32F407-DISCOVERY_W5500_INTRON/Core/Src/: eeprom.c  fatfs_sd.c  httpd.c  loopback.c  main.c  my_functions.c  net.c  ping.c  spi_eeprom.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c  system_stm32f4xx.c  tls-server-size.c  userHandler.c  w5500.c  wizchip_init.c
STM32F407-DISCOVERY_W5500_INTRON/Core/Startup/: startup_stm32f407vgtx.s
STM32F407-DISCOVERY_W5500_INTRON/Docs/: Alive_from_abom.ods  Flash.ods  Links
STM32F407-DISCOVERY_W5500_INTRON/FIRMWARE/16_11_2023_Абонент_с_трансивером/: 11_Converter_F407_INTRON_DT.hex
STM32F407-DISCOVERY_W5500_INTRON/FIRMWARE/23_11_2023_Абонент_с_трансивером_WEB/: 11_Converter_F407_INTRON_DT.hex
STM32F407-DISCOVERY_W5500_INTRON/FIRMWARE/24_11_2023_Абонент_с_трансивером_WEB/: 11_Converter_F407_INTRON_DT.hex
STM32F407-DISCOVERY_W5500_INTRON/FIRMWARE/Bridge_01_00/: Bridge_01_00.hex  Bridge_01_00_no_rectore.hex
STM32F407-DISCOVERY_W5500_INTRON/FIRMWARE/Bridge_01_01/: Bridge_01_01.hex
STM32F407-DISCOVERY_W5500_INTRON/FIRMWARE/Bridge_01_02/: Bridge_01_02.hex
STM32F407-DISCOVERY_W5500_INTRON/FIRMWARE/Bridge_01_02_SEGGER/: Bridge_01_02_SEGGER.hex
STM32F407-DISCOVERY_W5500_INTRON/FIRMWARE/Bridge_01_03/: Bridge_01_03.hex
STM32F407-DISCOVERY_W5500_INTRON/FIRMWARE/Bridge_01_04/: Bridge_01_04.hex
STM32F407-DISCOVERY_W5500_INTRON/FIRMWARE/Bridge_01_05/: Bridge_01_05.hex
STM32F407-DISCOVERY_W5500_INTRON/FIRMWARE/Bridge_01_06/: Bridge_01_06.hex
STM32F407-DISCOVERY_W5500_INTRON/FIRMWARE/Bridge_01_07/: Bridge_01_07.hex
STM32F407-DISCOVERY_W5500_INTRON/FIRMWARE/Bridge_02_02/: Bridge_2_2.hex
STM32F407-DISCOVERY_W5500_INTRON/FIRMWARE/Bridge_1_10/: Bridge_1_10.hex
STM32F407-DISCOVERY_W5500_INTRON/FIRMWARE/Bridge_1_11/: Bridge_1_11
STM32F407-DISCOVERY_W5500_INTRON/FIRMWARE/Bridge_1_8/: Bridge_1_8.hex
STM32F407-DISCOVERY_W5500_INTRON/FIRMWARE/Bridge_1_9/: Bridge_1_9.hex
STM32F407-DISCOVERY_W5500_INTRON/FIRMWARE/Bridge_2_0/: Bridge_2_0.hex
STM32F407-DISCOVERY_W5500_INTRON/FIRMWARE/Bridge_2_1/: Bridge_2_1.hex
STM32F407-DISCOVERY_W5500_INTRON/FIRMWARE/Firmware_v_1.0/: 11_Converter_F407_INTRON_DT.hex
STM32F407-DISCOVERY_W5500_INTRON/FPGA/ABON/: DCE01_3 067453ED [работающее ПО - устанавливать в АБОНЕНТА].pof
STM32F407-DISCOVERY_W5500_INTRON/FPGA/BASE/DCE01_PCB_3/: DCE01.qsf  DCE01.qws  DCE01_3.qpf  DCE01_3_description.txt  DCE01_SFL.bsf  DCE01_SFL.cmp  DCE01_SFL.qip  DCE01_SFL.vhd  DCE01_SFL_inst.vhd  _shrg_ctrl7.gdf  abonent.bsf  altpll1.bsf  altpll1.ppf  altpll2.ppf  altpll2.qip  altpll2.vhd  blinker.bsf  codeind.bdf  converter.cmp  cpu_int_form2.bdf  cpu_int_form2.bsf  dcdr01.vhd  div125.bsf  div5.bsf  div59.bsf  shrg_ctrl.bdf  shrg_ctrl3.bdf  shrg_ctrl3_old.bdf  shrg_ctrl6.bdf  shrg_ctrl7.bsf  shrg_ctrl8.bdf  stbus_ctrl2.bsf
STM32F407-DISCOVERY_W5500_INTRON/FPGA/DCE01_PCB_3/: ABONENT.v  DCDR01.bsf  DCE01.dpf  DCE01.qpf  DCE01_3.bdf  DCE01_3.dpf  DCE01_3.qsf  DCE01_SFL.inc  DCE01_description.txt  PLLJ_PLLSPE_INFO.txt  altpll0.ppf  altpll1.vhd  altpll2.cmp  blinker.bdf  dbltff.bdf  f0_former.bsf  plsgen.bsf  shrg_ctrl2.bdf  shrg_ctrl2.bsf  shrg_ctrl4.bdf  shrg_ctrl5.bdf  shrg_ctrl7.bdf  unifilter4.bdf
STM32F407-DISCOVERY_W5500_INTRON/FPGA/DCE01_PCB_3/db/: DCE01.(0).cnf.cdb  DCE01.(0).cnf.hdb  DCE01.(1).cnf.cdb  DCE01.(10).cnf.hdb  DCE01.(12).cnf.hdb  DCE01.(13).cnf.cdb  DCE01.(14).cnf.cdb  DCE01.(15).cnf.cdb  DCE01.(16).cnf.cdb  DCE01.(17).cnf.cdb  DCE01.(19).cnf.cdb  DCE01.(19).cnf.hdb  DCE01.(2).cnf.hdb  DCE01.(20).cnf.cdb  (+138 more)
STM32F407-DISCOVERY_W5500_INTRON/FPGA/FPGA-16-04-2024/: ALTSHIFT_TAPS.bsf  DBL_BUF.bdf  DBL_BUF.bsf  DCE01_3-16_04_2024 (double buffer).qar  DCE01_3-16_04_2024 (double buffer).qarlog  DCE01_3.bdf  DCE01_3.cbx.xml  DCE01_3.qsf  DCE01_3_assignment_defaults.qdf  altpll0.bsf  altpll0.cmp  altpll0.vhd  altpll1.cmp  altpll2.bsf  ch_clk_ctrl.bdf  ch_clk_ctrl.bsf  ch_clk_ctrl2.bdf  ch_clk_ctrl2.bsf  cntr7.bdf  cntr7.bsf  codeind.bsf  converter.bsf  cpu_int_form.bdf  cpu_int_form.bsf  dbltff.bsf  div125.bdf  div15.bdf  div15.bsf  div5-1123.bdf  div5-1123.bsf  div5.bdf  div59.bdf  div61.bdf  div61.bsf  f0_former.bdf  fpga_cpu_clk_sel.bsf  fpga_cpu_clk_sel.gdf  mux.bdf  mux.bsf  net_ctrl.bdf  (+21 more)
STM32F407-DISCOVERY_W5500_INTRON/LWIP/App/: lwip.c
STM32F407-DISCOVERY_W5500_INTRON/MBEDTLS/App/: mbedtls.c  mbedtls.h  mbedtls_config.h
STM32F407-DISCOVERY_W5500_INTRON/W5500_TLS/: CMakeLists.txt
STM32F407-DISCOVERY_W5500_INTRON/ioLibrary_Driver/Ethernet/: socket.c  socket.h  wizchip_conf.c  wizchip_conf.h
STM32F407-DISCOVERY_W5500_INTRON/web/: main.html  main_.html
STM32F407-DISCOVERY_W5500_INTRON/wolfSSL/: Readme.Md  tls-server-size.c  wolfSSL.I-CUBE-wolfSSL_conf.h
STM32F407-DISCOVERY_W5500_INTRON/wolfssl-examples-master/embedded/: tls-client-server.c  tls-server-size.c  tls-sock-server.c
STM32F407_TLS/W5500_TLS/: CMakeLists.txt  example.c
(+1227 files in other folders)
